--- a/NotSteam/NotSteam.csproj
+++ b/NotSteam/NotSteam.csproj
@@ -48,6 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddFunds.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddFunds.Designer.cs">
+      <DependentUpon>AddFunds.cs</DependentUpon>
+    </Compile>
     <Compile Include="Color.cs" />
     <Compile Include="Library.cs">
       <SubType>Form</SubType>
@@ -67,6 +73,12 @@
     <Compile Include="NotSteamForm.Designer.cs">
       <DependentUpon>NotSteamForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Profile.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Profile.Designer.cs">
+      <DependentUpon>Profile.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Store.cs">
@@ -76,6 +88,9 @@
       <DependentUpon>Store.cs</DependentUpon>
     </Compile>
     <Compile Include="user.cs" />
+    <EmbeddedResource Include="AddFunds.resx">
+      <DependentUpon>AddFunds.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Library.resx">
       <DependentUpon>Library.cs</DependentUpon>
     </EmbeddedResource>
@@ -84,6 +99,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="NotSteamForm.resx">
       <DependentUpon>NotSteamForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Profile.resx">
+      <DependentUpon>Profile.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
