update to fucking visual studio

--- a/NotSteam/NotSteam.csproj
+++ b/NotSteam/NotSteam.csproj
@@ -101,6 +101,12 @@
     <Compile Include="AddGame.Designer.cs">
       <DependentUpon>AddGame.cs</DependentUpon>
     </Compile>
+    <Compile Include="Community.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Community.Designer.cs">
+      <DependentUpon>Community.cs</DependentUpon>
+    </Compile>
     <Compile Include="EditProfile.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -178,6 +184,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AddGame.resx">
       <DependentUpon>AddGame.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Community.resx">
+      <DependentUpon>Community.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EditProfile.resx">
       <DependentUpon>EditProfile.cs</DependentUpon>
